--- a/css/style.css
+++ b/css/style.css
@@ -30,18 +30,24 @@ body {
 sub {
     font-size: 10px;
 }
-.menu {
-    position: fixed;
+.header {
     top: 0;
-    left: 50%;
-    transform: translateX(-150px);
+    left: 0;
+    position: fixed;
+    width: 100%;
     height: 40px;
+    display: flex;
+    justify-content: center;
+}
+.menu {
+    width: 300px;
     background-color: #4d84c4;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
     box-shadow: 0px 0px 10px 0 rgba(0, 0, 0, 0.4);
 }
 .menu__box {
+    width: 300px;
     text-align: center;
     font-size: 0;
 }
